--- a/start/package.json
+++ b/start/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^5.9.0",
     "expo": "~38.0.8",
     "expo-av": "^8.2.1",
+    "expo-splash-screen": "^0.5.0",
     "expo-status-bar": "^1.0.2",
     "lottie-react-native": "^3.5.0",
     "react": "~16.11.0",
